--- a/portfolio/src/assets/base.css
+++ b/portfolio/src/assets/base.css
@@ -56,7 +56,7 @@ nav {
   border-radius: 20px;
   border: 1px solid var(--color-border);
   position: relative;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .navbar {
