--- a/portfolio/src/styles/views/projects.css
+++ b/portfolio/src/styles/views/projects.css
@@ -45,6 +45,11 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.project-image:hover img {
+  transform: scale(1.05);
 }
 
 .project-title {
@@ -82,6 +87,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.overlay i {
+  background-color: var(--color-background-button);
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-size: 15px;
+  border-radius: 6px;
+  color: var(--color-text-primary);
 }
 
 .project-eye {
