--- a/portfolio/src/styles/views/info.css
+++ b/portfolio/src/styles/views/info.css
@@ -18,7 +18,6 @@
 }
 
 .info-img {
-    background-color: white;
     width: 9.313rem;
     height: 9.188rem;
     border-radius: 20px;
@@ -124,4 +123,21 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border: none;
     cursor: pointer;
+}
+
+.button-donwloadcv button:hover {
+    background-color: var(--color-background-icon);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    background: none;
+    border: none;
+    padding: 0; 
+    margin: 0;
+}
+
+a:hover {
+    color: var(--color-text-primary);
 }
