--- a/portfolio/src/styles/views/projects.css
+++ b/portfolio/src/styles/views/projects.css
@@ -20,6 +20,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
+  align-items: center;
   margin-left: 2.063rem;
 }
 
@@ -138,4 +139,10 @@
   background-color: var(--color-text-primary);
   color: var(--color-text-title);
   font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .projects-container {
+    margin-left: 3rem;
+  }
 }
