--- a/portfolio/src/styles/views/info.css
+++ b/portfolio/src/styles/views/info.css
@@ -1,164 +1,175 @@
 .container-info {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
   width: 17.375rem;
-  height: auto;
-  border-radius: 20px;
-  border: 1px solid var(--color-border);
-  background-color: var(--color-background-soft);
-  overflow: hidden;
-  padding: 1rem;
+  height: 46.75rem;
+  border-radius: 8px;
+  border: 1px solid var(--color-grey);
+  background-color: var(--color-dark-1);
 }
 
 .personal-info {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 3.438rem;
+  margin-top: 2.75rem;
 }
 
 .info-img {
   width: 9.313rem;
   height: 9.188rem;
-  border-radius: 20px;
+  border-radius: 4px;
   overflow: hidden;
 }
 
 .info-img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .info-name {
-  color: var(--color-text-title);
-  font-weight: bold;
-  font-size: 1.625rem;
-  margin-top: 1.438rem;
+  color: var(--color-light);
+  font-weight: var(--font-weight-semibold);
+  font-size: 1.5rem;
+  margin-top: 1.813rem;
 }
 
 .info-job {
-  color: var(--color-text-paragraph);
-  font-size: 0.813rem;
-  font-weight: medium;
-  width: 9.688rem;
-  height: 1.75rem;
-  background-color: var(--color-background-button);
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1rem;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: var(--color-light--1);
+  font-size: 0.875rem;
+  font-weight: var(--font-weight-regular);
+  font-family: var(--font-family);
+  margin-top: 0.281rem;
+  margin-bottom: 1.656rem;
 }
 
 .line {
   width: 14.875rem;
   height: 1px;
-  background-color: var(--color-border);
-  margin-top: 2.156rem;
-  margin-bottom: 2.281rem;
+  background-color: var(--color-grey);
 }
 
-.toggle-icon {
-  cursor: pointer;
-  font-size: 1.5rem;
-  color: var(--color-text-primary);
-}
-
-.contacts {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.group-contact {
-  display: flex;
-  flex-direction: row;
-  gap: 0.625rem;
-}
-
-.icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 2.75rem;
-  height: 2.563rem;
-  background-color: var(--color-background-icon);
-  border-radius: 8px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.icon i {
-  font-size: 1rem;
-  color: var(--color-text-primary);
-}
-
-.info {
+.routers {
   display: flex;
   flex-direction: column;
-  gap: 0.375rem;
+  width: 14.75rem;
+  gap: 0.915rem;
+  margin-top: 2rem;
 }
 
-.info .title {
-  color: var(--color-text-title-contacts);
-  font-size: 0.813rem;
-  font-weight: medium;
-}
-
-.info .info {
-  color: var(--color-text-info-contacts);
-  font-size: 0.813rem;
-  font-weight: medium;
-}
-
-.button-donwloadcv button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--color-text-paragraph);
-  font-size: 0.813rem;
-  font-weight: medium;
-  width: 9.688rem;
-  height: 1.75rem;
-  background-color: var(--color-background-button);
-  border-radius: 10px;
-  margin-top: 3.188rem;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border: none;
-  cursor: pointer;
-}
-
-.button-donwloadcv button:hover {
-  background-color: var(--color-background-icon);
-}
-
-a {
+.routers a {
   text-decoration: none;
-  color: inherit;
+  color: var(--color-light--1);
+  font-size: 0.915rem;
+  font-weight: var(--font-weight-regular);
+  border-radius: 3.66px;
+  transition: background 0.3s ease-in-out;
+  padding: 0.458rem 0.915rem;
+}
+
+.routers a:hover {
+  background: var(--color-grey);
+}
+
+.routers a.active {
+  background: var(--color-light-1);
+  color: var(--color-primary);
+  font-weight: var(--font-weight-bold);
+}
+
+.utils {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 14.75rem;
+  margin-top: 4.5rem;
+  color: var(--color-light--1);
+  margin-bottom: 0.938rem;
+}
+
+.theme-toggle {
   background: none;
   border: none;
-  padding: 0;
-  margin: 0;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--color-light);
 }
 
-a:hover {
-  color: var(--color-text-primary);
+.theme-toggle:hover {
+  color: var(--color-primary);
 }
 
-@media (max-width: 768px) {
-  .container-info {
-    width: 100%;
-  }
+.theme-toggle i {
+  color: var(--color-light--1);
+  transition: opacity 0.3s ease;
+}
 
-  .personal-info {
-    margin-top: 1.5rem;
-  }
+.theme-toggle:hover i {
+  opacity: 0.7;
+}
 
-  .button-donwloadcv button {
-    margin-top: 1.5rem;
-    padding: 1.5rem;
-  }
+.social-medias {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-top: 0.938rem;
+  /* margin-left: auto;
+  margin-right: 1.833rem; */
+  width: 14.75rem;
+  gap: 0.875rem;
+}
+
+.social-medias img {
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.3s ease;
+}
+
+.social-medias img:hover {
+  opacity: 0.7;
+}
+
+.language-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.language-btn {
+  display: flex;
+  align-items: center;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 0.915rem;
+  color: var(--color-light--1);
+  gap: 0.458rem;
+  transition: opacity 0.3s ease;
+}
+
+.language-btn:hover {
+  opacity: 0.7;
+}
+
+.language-menu {
+  position: absolute;
+  top: 130%;
+  left: 0;
+  background: var(--color-dark-1);
+  border: 1px solid var(--color-grey);
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 5px 5px;
+  list-style: none;
+  font-weight: var(--font-weight-semibold);
+  min-width: 11.25rem;
+}
+
+.language-menu li {
+  padding: 8px 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 0.9rem;
+}
+
+.language-menu li:hover {
+  background: var(--color-primary--1);
 }
