--- a/portfolio/src/styles/views/about.css
+++ b/portfolio/src/styles/views/about.css
@@ -42,7 +42,6 @@
                 justify-content: center;
                 background-color: var(--color-light-1);
                 color: var(--color-grey);
-                font-size: 1rem;
                 padding: 0.625rem 0.875rem;
                 border: none;
                 border-radius: 4px;
@@ -51,15 +50,10 @@
                 gap: 0.625rem;
             }
     
-            .download-cv img {
-                width: 1.2rem;
-                height: auto;
-            }
-    
             .download-cv a {
                 text-decoration: none;
                 color: var(--color-grey);
-                font-size: 1rem;
+                font-size: 0.875rem;
                 font-weight: var(--font-weight-regular);
                 font-family: var(--font-family);
             }
@@ -153,13 +147,16 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
-            padding: 20px;
+            padding-top: 10px;
+            padding-left: 10px;
+            width: 80%;
         }
         
         .image-placeholder img {
             width: 100%;
             height: auto;
-            border-radius: 10px;
+            border-radius: 4px;
         }
+        
     }
 }
