--- a/portfolio/src/styles/views/experience.css
+++ b/portfolio/src/styles/views/experience.css
@@ -13,24 +13,56 @@ li {
 }
 
 .section{
-    margin-left: 2.813rem;
-    margin-top: 2.5rem;
+    display: flex;
+    justify-content: center;
+    margin-top: 2.563rem;
 }
+
+.container-experience {
+    position: relative;
+    width: 53.125rem;
+    max-height: 45rem;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+.section::after {
+    content: "↓";
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5rem;
+    color: var(--color-light);
+    animation: bounce 1.5s infinite;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateX(-50%) translateY(0);
+    }
+    50% {
+        transform: translateX(-50%) translateY(-8px);
+    }
+    100% {
+        transform: translateX(-50%) translateY(0);
+    }
+}
+
 
 .icon-box {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 2.75rem;
-    height: 2.563rem;
-    background-color: var(--color-background-icon);
-    border-radius: 8px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    width: 4.072rem;
+    height: 4.499rem;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 1px solid var(--color-grey);
 }
 
 .icon-box i {
-    font-size: 1rem;
-    color: var(--color-text-primary);
+    font-size: 1.224rem;
+    color: var(--color-light--1);
 }
 
 .timeline { margin-bottom: 30px; }
@@ -38,12 +70,12 @@ li {
 .timeline .title-wrapper {
     display: flex;
     align-items: center;
-    gap: 15px;
-    margin-bottom: 25px;
+    gap: 1.5rem;
+    margin-bottom: 4.188rem;
 }
 
 .timeline-list {
-    margin-left: 45px;
+    margin-left: 3.5rem;
 }
 
 .timeline-item { 
@@ -51,28 +83,16 @@ li {
 }
 
 .timeline-item:not(:last-child) {
-    margin-bottom: 20px;
-}
-
-.timeline-item-title {
-    font-size: 1rem;
-    font-weight: bold;
-    color: var(--color-text-title-about);
-    margin-bottom: 8px;
-}
-
-.timeline-list span {
-    color: var(--color-text-primary);
-    font-weight: bold;
+    margin-bottom: 2rem;
 }
 
 .timeline-item:not(:last-child)::before {
     content: "";
     position: absolute;
-    top: -25px;
+    top: -68px;
     left: -25px;
     width: 1px;
-    height: calc(100% + 50px);
+    height: calc(100% + 6.25rem);
     background: var(--jet);
 }
 
@@ -83,21 +103,81 @@ li {
     left: -28px;
     height: 6px;
     width: 6px;
-    background: var(--color-text-primary);
+    background: var(--color-light--1);
     border-radius: 50%;
     box-shadow: 0 0 0 4px var(--jet);
 }
 
-.timeline-text {
-    color: var(--color-text-experience);
-    font-weight: medium;
-    max-width: 49rem;
-    margin-top: 8px;
+.experience-title {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
-@media (max-width: 768px) {
-    .section {
-      margin-left: 0;
+.experience-title h1{
+    color: var(--color-light);
+    font-weight: var(--font-weight-semibold);
+    font-size: 1.5rem;
+}
+
+.experience-title h2{
+    color: var(--color-light--1);
+    font-size: 1rem;
+    font-weight: var(--font-weight-regular);
+}
+
+.timeline-item-frame {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 0.5rem;
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
     }
+
+    .description {
+        font-size: 1rem;
+        font-weight: var(--font-weight-regular);
+        color: var(--color-light--1);
+    }
+}
+
+.timeline-item-frame .header h1{
+    font-size: 1.125rem;
+    font-weight: var(--font-weight-semibold);
+    color: var(--color-light);
+}
+
+.timeline-item-frame .header h2{
+    font-size: 1rem;
+    font-weight: var(--font-weight-regular);
+    color: var(--color-light);
+}
+
+
+.timeline-item-frame .group-items {
+    display: flex;
+    flex-direction: row;
+
+    .period, .region, .type{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+        margin-right: 10px;
+        color: var(--color-light--1);
+        font-size: 0.875rem;
+        font-weight: var(--font-weight-semibold);
+    }
+}
+
+.description li::before {
+    content: "• ";
+    color: var(--color-light--1);
+    font-weight: bold;
+    margin-right: 5px;
   }
   
