--- a/portfolio/src/assets/base.css
+++ b/portfolio/src/assets/base.css
@@ -70,3 +70,38 @@ body {
     gap: 1rem;
   }
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  border: 0px none var(--color-light-1);
+  border-radius: 50px;
+  transition: opacity 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary-1);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: var(--color-primary--1);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-grey);
+  border: 0px none var(--color-light-1);
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
