--- a/portfolio/src/styles/views/experience.css
+++ b/portfolio/src/styles/views/experience.css
@@ -27,32 +27,8 @@ li {
 .container-experience {
     position: relative;
     width: 53.125rem;
-    max-height: 45rem;
-    overflow-y: scroll;
-    scrollbar-width: none;
-}
-
-.section-experience::after {
-    content: "↓";
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.5rem;
-    color: var(--color-light);
-    animation: bounce 1.5s infinite;
-}
-
-@keyframes bounce {
-    0% {
-        transform: translateX(-50%) translateY(0);
-    }
-    50% {
-        transform: translateX(-50%) translateY(-8px);
-    }
-    100% {
-        transform: translateX(-50%) translateY(0);
-    }
+    /* max-height: 45rem; */
+    padding-bottom: 2rem;
 }
 
 .icon-box {
