--- a/portfolio/src/styles/views/info.css
+++ b/portfolio/src/styles/views/info.css
@@ -23,7 +23,7 @@
 .info-img img {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 .info-name {
@@ -92,6 +92,7 @@
   cursor: pointer;
   font-size: 1.2rem;
   color: var(--color-light);
+  margin-bottom: 4.5rem;
 }
 
 .theme-toggle:hover {
