--- a/portfolio/src/styles/views/about.css
+++ b/portfolio/src/styles/views/about.css
@@ -155,3 +155,38 @@
         
     }
 }
+
+@media (max-width: 768px) {
+    .section-home {
+        .container-about {
+            width: 80%;
+            max-height: none; 
+            margin-top: 1.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .about {
+            .about-skills {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 1rem;
+            }
+    
+            .about-skills span {
+                border-radius: 8px;
+                padding: 0.625rem 0.875rem;
+                background-color: var(--color-primary--1);
+                font-weight: var(--font-weight-semibold);
+                font-size: 1rem;
+                color: var(--color-light--1);
+                white-space: nowrap;
+            }
+
+            .about-header {          
+                .download-cv {
+                    padding: 0.4rem 0.6rem;
+                }
+            }
+        }
+    }
+}
